import "Vector.proto";

message EntityFighterFlamingo {
    required int32 type = 1;
    required Vector position = 2;
    required Vector velocity = 3;
    required Vector acceleration = 4;
    required int32 ownerId = 5;
    required int32 class = 6;
    required bool firing = 7;
    required Vector aim = 8;
    required float cooldown = 9;
    required float breath = 10;
    required bool breathing = 11;
}