message PlayerConnect {
    required int32 type = 1;
    required string username = 2;
}