syntax = "proto3";
package core;

enum TypeEnum {
    LobbyRequest = 100;
    LobbyResponse = 101;

    ClientConnect = 200;
    ClientAck = 201;
    ClientDisconnect = 202;
};
